# vhong-makemore

./: .gitignore  CLAUDE.md  bigram.py  bigram_nn.py  main.py  makemore_part1_bigrams.py  makemore_part1_bigrams_nn.py  makemore_part2_mlp.py  makemore_part4_backprop.py  mlp.py  mlp_bn_notebook.py  pyproject.toml  study_plan.md
.claude/skills/: marimo.md
exercises/: README.md  bug01_normalization_axis.py  bug02_broadcasting_shape.py  bug03_integer_division.py  bug04_smoothing_broadcast.py  bug05_log_of_zero.py  bug06_softmax_dim.py  bug07_onehot_dtype.py  bug08_cross_entropy_input.py  bug09_gradient_accumulation.py  bug10_inplace_operation.py
exercises/solutions/: bug01_solution.py  bug02_solution.py  bug03_solution.py  bug04_solution.py  bug05_solution.py  bug06_solution.py  bug07_solution.py  bug08_solution.py  bug09_solution.py  bug10_solution.py
